# hati

./: .gitignore  Makefile  README.md  TODO
extension/: extension.js  magnifier_clip.frag  metadata.json  prefs.js  utils.js
extension/animations/: animations.js
extension/modules/: auto-hide.js  glow.js  highlight-renderer.js  indicator.js  magnifier.js  physics.js  presets-manager.js  scene-cloner.js  spotlight.js  style-manager.js
extension/prefs/: appearance-group.js  behavior-group.js  border-group.js  colors-group.js  core-group.js  general-group.js  idle-group.js  interaction-group.js  magnifier-group.js  physics-group.js  presets-page.js  spotlight-group.js  styling-group.js
extension/schemas/: io.github.szymonwilczek.hati.gschema.xml  org.gnome.shell.extensions.hati.gschema.xml  org.hati.Highlighter.gschema.xml
extension/shaders/: highlight.glsl  magnifier-clip-effect.js  magnifier-clip.frag  magnifier-clip.glsl  shaders.js  spotlight-effect.js  spotlight.frag  spotlight.glsl
frontend/: Cargo.toml
frontend/src/: main.rs  window.rs
scripts/: install.sh
